# kantuta_ai_backend

./: .gitignore  CLAUDE.md  README.md  db.py  docker-compose.yml  langgraph.json  migrate_categoria_biblioteca.py  migrate_nombre_completo.py  migrate_progreso_indexacion.py  pyproject.toml  qwen3_modelfile.txt  qwen3_modelfile_es.txt  seed.py
ai/agents/conversational_assistant/: agent.py  llms.py  states.py
ai/agents/conversational_assistant/nodes/generator/: node.py  prompts.py
ai/agents/conversational_assistant/nodes/retriever/: node.py
ai/agents/ingestor/: agent.py  llms.py  states.py
ai/agents/ingestor/nodes/ingestor_node/: node.py
ai/agents/ingestor/nodes/loader/: node.py
ai/agents/ingestor/nodes/splitter/: node.py
ai/agents/test_agent/: test.py
ai/api/: main.py
ai/notebooks/: ingestion.ipynb  test.ipynb
ai/test/: dataset_kantuta_group - dataset_kantuta_group.csv  evaluacion.ipynb  llm_as_a_judge.ipynb  no_rag.ipynb
app/: main.py
app/core/: deps.py  security.py
app/routers/: action.py  agent_chat.py  auth.py  caso.py  chat_session.py  documento_comocimiento.py  knowledge_search.py  reporte.py  rol.py  system_prompt.py  user.py
app/schemas/: user.py
app/services/: ingestion.py
diagrams/: casos_sequence_diagram.puml  er_chen_diagram.puml  gestion_prompts_diagram.puml  gestion_roles_accesos_diagram.puml
diagrams/base_de_conocimiento_diagramas/: 01_subir_documento.puml  02_consultar_documentos.puml  03_descargar_documento.puml  04_actualizar_documento.puml  05_eliminar_documento.puml
models/: action.py  casos.py  chat_session.py  documento_conocimiento.py  documentos.py  links.py  rol.py  system_prompt.py  user.py
tests/: test_db_conexion.py
