[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain[google-genai]>=1.2.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph-cli[inmem,inmen]>=0.4.12",
    "ollama>=0.6.1",
]

[tool.setuptools.packages.find]
where = ["ai"]
include = ["*"]
