[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "chroma>=0.2.0",
    "fastapi[standard]>=0.128.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.0",
    "langchain[google-genai]>=1.2.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith>=0.6.8",
    "pandas>=3.0.1",
    "passlib>=1.7.4",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "reportlab>=4.2.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph-cli[inmem,inmen]>=0.4.12",
    "ollama>=0.6.1",
]

[tool.setuptools.packages.find]
where = ["ai"]
include = ["*"]
